--- a/pentix_l/index.html
+++ b/pentix_l/index.html
@@ -1,6 +1,10 @@
 <html>
     <head>
         <title>PENTIX++</title>
+        <script src="assemblies.js"></script>
+        <script src="board.js"></script>
+        <script src="figure.js"></script>
+        <script src="game.js"></script>        
     </head>
     <body>
         <div id="gameboard_div"></div>
