--- a/pentix_l/index.html
+++ b/pentix_l/index.html
@@ -1,13 +1,20 @@
 <html>
     <head>
         <title>PENTIX++</title>
+        <!--libs-->
+        <script src="libs/svg.min.js"></script>
+        <!--end libs-->
+
+        <!--internal-->
         <script src="assemblies.js"></script>
         <script src="board.js"></script>
         <script src="figure.js"></script>
         <script src="game.js"></script>        
+        <script src="renderer.js"></script>        
+        <!--end internal-->
     </head>
     <body>
-        <div id="gameboard_div"></div>
+        <div id="gameboard_div" style="width: 700px; height:500px; border: solid black 1px"></div>
         <script src="main.js"></script>
     </body>
 </html>
