--- a/pentix_l/index.html
+++ b/pentix_l/index.html
@@ -7,6 +7,7 @@
 
         <!--internal-->
         <script src="assemblies.js"></script>
+        <script src="commands.js"></script>
         <script src="board.js"></script>
         <script src="figure.js"></script>
         <script src="game.js"></script>        
@@ -14,7 +15,7 @@
         <!--end internal-->
     </head>
     <body>
-        <div id="gameboard_div" style="width: 1000px; height:800px; border: solid black 1px"></div>
+        <div id="gameboard_div" ></div>
         <script src="main.js"></script>
     </body>
 </html>
